--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "x2_values = \n",
     "\n",
     "\n",
     "\n",
