Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x2_values = \n",
+    "y2_values = \n",
     "\n",
     "\n",
     "\n",
