--- a/index.ipynb
+++ b/index.ipynb
@@ -391,11 +391,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y2_values = \n",
+    "y2_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "\n",
     "\n",
     "\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': 'text_values'}"
    ]
   },
