Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,25 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-13-9cd8c5138f5d>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-9cd8c5138f5d>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y2_values, 'text': 'text_values}\u001b[0m\n\u001b[0m                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[4758, 2731571, 3194]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "y2_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "\n",
-    "\n",
-    "\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y2_values, 'text': 'text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': 'text_values'}"
+    "y2_values"
    ]
   },
   {
