Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,18 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[4758, 2731571, 3194]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-17-3e809b88b234>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-3e809b88b234>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y2_values, 'text': 'text_values}\u001b[0m\n\u001b[0m                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
     }
    ],
    "source": [
